--- a/data_preparation.ipynb
+++ b/data_preparation.ipynb
@@ -1552,11 +1552,354 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "id": "88ddbd76",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_df = pd.read_csv('sample_dataset/train_labels.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "330c8436",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Image Index</th>\n",
+       "      <th>Pneumonia</th>\n",
+       "      <th>Hernia</th>\n",
+       "      <th>Fibrosis</th>\n",
+       "      <th>Edema</th>\n",
+       "      <th>Emphysema</th>\n",
+       "      <th>Cardiomegaly</th>\n",
+       "      <th>Pleural_Thickening</th>\n",
+       "      <th>Consolidation</th>\n",
+       "      <th>Pneumothorax</th>\n",
+       "      <th>Mass</th>\n",
+       "      <th>Nodule</th>\n",
+       "      <th>Atelectasis</th>\n",
+       "      <th>Effusion</th>\n",
+       "      <th>Infiltration</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00003300_000.png</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>00003459_025.png</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>00000061_019.png</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>00002589_002.png</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>00001779_000.png</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>00001648_005.png</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>00002817_001.png</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>00003610_004.png</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>00002451_002.png</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>00030398_000.png</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Image Index  Pneumonia  Hernia  Fibrosis  Edema  Emphysema  \\\n",
+       "0  00003300_000.png          0       0         0      0          0   \n",
+       "1  00003459_025.png          0       0         0      0          0   \n",
+       "2  00000061_019.png          0       0         0      0          0   \n",
+       "3  00002589_002.png          0       0         0      0          0   \n",
+       "4  00001779_000.png          0       0         0      0          0   \n",
+       "5  00001648_005.png          0       0         0      0          0   \n",
+       "6  00002817_001.png          0       0         0      0          0   \n",
+       "7  00003610_004.png          0       0         0      0          0   \n",
+       "8  00002451_002.png          0       0         0      0          0   \n",
+       "9  00030398_000.png          1       0         0      0          0   \n",
+       "\n",
+       "   Cardiomegaly  Pleural_Thickening  Consolidation  Pneumothorax  Mass  \\\n",
+       "0             0                   0              0             0     0   \n",
+       "1             0                   0              0             0     0   \n",
+       "2             0                   0              0             0     0   \n",
+       "3             0                   0              0             0     0   \n",
+       "4             0                   0              0             0     0   \n",
+       "5             0                   0              0             0     0   \n",
+       "6             0                   0              0             0     0   \n",
+       "7             0                   0              0             0     0   \n",
+       "8             0                   0              0             0     0   \n",
+       "9             0                   0              1             0     0   \n",
+       "\n",
+       "   Nodule  Atelectasis  Effusion  Infiltration  \n",
+       "0       0            0         0             0  \n",
+       "1       0            0         0             0  \n",
+       "2       0            0         0             0  \n",
+       "3       0            0         0             0  \n",
+       "4       0            0         0             0  \n",
+       "5       0            0         0             0  \n",
+       "6       0            1         0             0  \n",
+       "7       0            0         0             1  \n",
+       "8       1            0         0             1  \n",
+       "9       0            0         1             0  "
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "e2c092eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = train_df.iloc[:,1:].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "c9e4649c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pf = np.sum(labels, axis=0) / labels.shape[0]\n",
+    "nf =  1 - pf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "c8afec03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w_n = pf\n",
+    "w_p = nf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "9f97d30e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.9673943 , 0.12893847, 0.42839128, ..., 0.03643596, 0.77429509,\n",
+       "        0.17131781],\n",
+       "       [0.15844597, 0.40971842, 0.52587062, ..., 0.33335781, 0.55293641,\n",
+       "        0.2635913 ],\n",
+       "       [0.53549776, 0.29904524, 0.94056731, ..., 0.59352463, 0.38710389,\n",
+       "        0.29188418],\n",
+       "       ...,\n",
+       "       [0.86186523, 0.50513403, 0.73728269, ..., 0.96064977, 0.55743422,\n",
+       "        0.91633628],\n",
+       "       [0.2217775 , 0.29317326, 0.65238972, ..., 0.16264281, 0.45077174,\n",
+       "        0.24294709],\n",
+       "       [0.04827877, 0.8334537 , 0.93597886, ..., 0.15544166, 0.22058297,\n",
+       "        0.42804025]])"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred = np.random.random(labels.shape)"
+   ]
   }
  ],
  "metadata": {
